--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/PhanCongCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/PhanCongCongNhan.fxml
@@ -104,7 +104,7 @@
                   <HBox alignment="CENTER_LEFT" spacing="10.0">
                      <children>
                         <Label text="Hợp đồng:" />
-                        <ComboBox fx:id="cbxHopDongPCCN" onAction="#skcbxMaHopDong" prefWidth="150.0" />
+                        <ComboBox fx:id="cbxHopDongPCCN" onAction="#skcbxMaHopDong" prefHeight="26.0" prefWidth="322.0" />
                      </children>
                      <padding>
                         <Insets left="5.0" />
