--- a/src/main/resources/com/openjfx/qllspahg/fxml/NhanVien/QuanLyNhanVien.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/NhanVien/QuanLyNhanVien.fxml
@@ -17,8 +17,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-    <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.QuanLyNhanVienController">
+<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.QuanLyNhanVienController">
         <center>
             <SplitPane dividerPositions="0.5" orientation="VERTICAL" BorderPane.alignment="CENTER">
                 <items>
@@ -111,7 +110,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Mã số nhân viên" />
-                  <TextField fx:id="tfMaTTNhanVien" disable="true" editable="false" prefHeight="26.0" prefWidth="210.0" />
+                  <TextField fx:id="tfMaTTNhanVien" disable="true" editable="false" prefHeight="26.0" prefWidth="236.0" />
                </children>
                <padding>
                   <Insets left="5.0" />
@@ -120,7 +119,7 @@
                     <HBox alignment="CENTER_LEFT" spacing="10.0">
                         <children>
                             <Label text="Tên nhân viên: " />
-                            <TextField fx:id="tfTenTTNhanVien" prefHeight="26.0" prefWidth="227.0" />
+                            <TextField fx:id="tfTenTTNhanVien" prefHeight="26.0" prefWidth="242.0" />
                         </children>
                         <padding>
                             <Insets left="5.0" right="5.0" />
@@ -143,7 +142,7 @@
                             <HBox alignment="CENTER" spacing="10.0">
                                 <children>
                                     <Label text="Ngày sinh: " />
-                                    <DatePicker fx:id="datepickNgaySinhTTNhanVien" />
+                                    <DatePicker fx:id="datepickNgaySinhTTNhanVien" prefHeight="26.0" prefWidth="148.0" />
                                 </children>
                                 <padding>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -154,7 +153,7 @@
                     <HBox alignment="CENTER_LEFT" spacing="10.0">
                         <children>
                             <Label text="Số điện thoại: " />
-                            <TextField fx:id="tfSoDienThoaiTTNhanVien" prefHeight="26.0" prefWidth="172.0">
+                            <TextField fx:id="tfSoDienThoaiTTNhanVien" prefHeight="26.0" prefWidth="251.0">
                                 <HBox.margin>
                                     <Insets />
                                 </HBox.margin>
@@ -167,7 +166,7 @@
                     <HBox alignment="CENTER_LEFT" spacing="10.0">
                         <children>
                             <Label text="Email: " />
-                            <TextField fx:id="tfEmailTTNhanVien" prefHeight="26.0" prefWidth="214.0" />
+                            <TextField fx:id="tfEmailTTNhanVien" prefHeight="26.0" prefWidth="293.0" />
                         </children>
                         <padding>
                             <Insets left="5.0" right="5.0" />
@@ -176,7 +175,7 @@
                     <HBox alignment="CENTER_LEFT" spacing="10.0">
                         <children>
                             <Label text="Số tài khoản: " />
-                            <TextField fx:id="tfSoTaiKhoanTTNhanVien" alignment="BASELINE_LEFT" prefHeight="26.0" prefWidth="175.0" />
+                            <TextField fx:id="tfSoTaiKhoanTTNhanVien" alignment="BASELINE_LEFT" prefHeight="26.0" prefWidth="255.0" />
                         </children>
                         <padding>
                             <Insets left="5.0" right="5.0" />
@@ -185,7 +184,7 @@
                     <HBox alignment="CENTER_LEFT" spacing="10.0">
                         <children>
                             <Label text="Phòng ban: " />
-                            <ComboBox fx:id="cbxPhongBanTTNhanVien" prefHeight="26.0" prefWidth="183.0" />
+                            <ComboBox fx:id="cbxPhongBanTTNhanVien" prefHeight="26.0" prefWidth="262.0" />
                         </children>
                         <padding>
                             <Insets left="5.0" right="5.0" />
@@ -194,7 +193,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Phụ cấp :" />
-                  <ComboBox fx:id="cbxPhuCapTTNhanVien" prefWidth="150.0" />
+                  <ComboBox fx:id="cbxPhuCapTTNhanVien" prefHeight="26.0" prefWidth="276.0" />
                </children>
                <padding>
                   <Insets left="5.0" />
@@ -205,7 +204,7 @@
                             <HBox alignment="CENTER" spacing="10.0">
                                 <children>
                                     <Label text="Chức vụ: " />
-                                    <ComboBox fx:id="cbxChucVuTTNhanVien" prefHeight="26.0" prefWidth="193.0" />
+                                    <ComboBox fx:id="cbxChucVuTTNhanVien" prefHeight="26.0" prefWidth="267.0" />
                                 </children>
                                 <padding>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -222,7 +221,7 @@
                             <HBox alignment="CENTER" spacing="5.0">
                                 <children>
                                     <Label text="Ngày vào làm: " />
-                                    <DatePicker fx:id="datepickNgayVaoLamTTNhanVien" HBox.hgrow="ALWAYS" />
+                                    <DatePicker fx:id="datepickNgayVaoLamTTNhanVien" prefHeight="26.0" prefWidth="137.0" HBox.hgrow="ALWAYS" />
                                 </children>
                                 <padding>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -233,7 +232,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Lương cơ bản:" />
-                  <TextField fx:id="tfLuongCoBanTTNhanVien" prefHeight="26.0" prefWidth="188.0" />
+                  <TextField fx:id="tfLuongCoBanTTNhanVien" prefHeight="26.0" prefWidth="246.0" />
                </children>
                <padding>
                   <Insets left="5.0" />
