--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/PhanCongCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/PhanCongCongNhan.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -169,6 +170,14 @@
                            </children>
                         </HBox>
                      </children>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <CheckBox fx:id="ckcTangCa" mnemonicParsing="false" text="Tăng ca" />
+                     </children>
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding>
                   </HBox>
                   <HBox alignment="CENTER" spacing="10.0">
                      <children>
