--- a/src/main/resources/com/openjfx/qllspahg/fxml/NhanVien/TamUngNhanVien.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/NhanVien/TamUngNhanVien.fxml
@@ -2,55 +2,17 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.TamUngNhanVienController">
-        <top>
-            <HBox alignment="CENTER_LEFT" prefWidth="1180.0" spacing="15.0" BorderPane.alignment="CENTER">
-                <children>
-                    <HBox alignment="CENTER" spacing="10.0">
-                        <children>
-                            <Label text="Mã nhân viên" />
-                            <TextField fx:id="tfMaNhanVien" prefHeight="26.0" prefWidth="152.0" />
-                        </children>
-                        <padding>
-                            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                        </padding>
-                    </HBox>
-                    <HBox alignment="CENTER" spacing="10.0">
-                        <children>
-                            <Label text="Tên nhân viên" />
-                            <TextField fx:id="tfTenNhanVien" prefHeight="26.0" prefWidth="152.0" />
-                        </children>
-                        <padding>
-                            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                        </padding>
-                    </HBox>
-                    <HBox alignment="CENTER" prefHeight="30.0" prefWidth="270.0" spacing="10.0">
-                        <children>
-                            <Label text="Phòng ban: " />
-                            <ComboBox fx:id="cbxPhongBan" prefHeight="26.0" prefWidth="154.0" />
-                        </children>
-                        <padding>
-                            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                        </padding>
-                    </HBox>
-                    <Button fx:id="btnLayDuLieu" mnemonicParsing="false" text="Lấy dữ liệu " />
-                </children>
-                <BorderPane.margin>
-                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                </BorderPane.margin>
-            </HBox>
-        </top>
         <center>
             <ScrollPane fitToHeight="true" fitToWidth="true" BorderPane.alignment="CENTER">
                 <content>
@@ -68,25 +30,111 @@
                 </content>
             </ScrollPane>
         </center>
-        <bottom>
-            <HBox alignment="CENTER_RIGHT" fillHeight="false" spacing="100.0" BorderPane.alignment="CENTER">
-                <children>
-                    <Button fx:id="btnTamUng" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Tạm ứng">
-                        <graphic>
-                            <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../images/icons/save.png" />
-                                </image>
-                            </ImageView>
-                        </graphic>
-                    </Button>
-                </children>
-                <BorderPane.margin>
-                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                </BorderPane.margin>
-                <padding>
-                    <Insets right="10.0" top="10.0" />
-                </padding>
+   <left>
+      <VBox spacing="5.0" style="-fx-border-color: black;" BorderPane.alignment="CENTER">
+         <children>
+            <HBox alignment="CENTER_LEFT">
+               <children>
+                  <Label text="Thông tin tạm ứng">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Label>
+               </children>
             </HBox>
-        </bottom>
+            <HBox alignment="CENTER_LEFT">
+               <children>
+                  <Label text="Mã tạm ứng: " />
+                  <TextField fx:id="tfMaTamUng" disable="true" editable="false" prefWidth="200.0" />
+               </children>
+            </HBox>
+            <VBox spacing="10.0" style="-fx-border-color: black;">
+               <children>
+                  <HBox alignment="CENTER_LEFT">
+                     <children>
+                        <Label text="Tìm kiếm thông tin công nhân">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT">
+                     <children>
+                        <Label text="Mã nhân viên: " />
+                        <TextField fx:id="tfMaNhanVien" prefHeight="26.0" prefWidth="188.0" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER">
+                     <children>
+                        <Button fx:id="btnLayThongTin" mnemonicParsing="false" onAction="#skbtnLayThongTin" text="Lấy thông tin" />
+                     </children>
+                  </HBox>
+               </children>
+               <padding>
+                  <Insets left="5.0" right="5.0" />
+               </padding>
+            </VBox>
+            <HBox alignment="CENTER_LEFT">
+               <children>
+                  <Label text="Tên nhân viên: " />
+                  <TextField fx:id="tfTenNhanVien" disable="true" editable="false" prefHeight="26.0" prefWidth="190.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT">
+               <children>
+                  <Label text="Phòng ban: " />
+                  <TextField fx:id="tfPhongBan" disable="true" editable="false" prefHeight="26.0" prefWidth="205.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT">
+               <children>
+                  <Label text="Số ngày đi làm: " />
+                  <TextField fx:id="tfSoNgayDiLam" disable="true" editable="false" prefHeight="26.0" prefWidth="187.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT">
+               <children>
+                  <Label text="Ngày tạm ứng:" />
+                  <TextField fx:id="tfNgayTamUng" disable="true" editable="false" prefHeight="26.0" prefWidth="192.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT">
+               <children>
+                  <Label text="Số tiền tạm ứng: " />
+                  <TextField fx:id="tfSoNgayTamUng" prefHeight="26.0" prefWidth="178.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" spacing="10.0">
+               <children>
+                  <Button fx:id="btnHuyXem" disable="true" mnemonicParsing="false" text="Hủy xem" />
+                  <Button fx:id="btnUngLuong" mnemonicParsing="false" text="Ứng Lương" />
+               </children>
+               <padding>
+                  <Insets top="5.0" />
+               </padding>
+            </HBox>
+         </children>
+         <padding>
+            <Insets left="3.0" right="3.0" />
+         </padding>
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" />
+         </BorderPane.margin>
+      </VBox>
+   </left>
+   <top>
+      <HBox alignment="CENTER" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Ngày: ">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblTieuDeNgayTamUng" text="01/01/2000">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
+   </top>
     </BorderPane>
