--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/TinhLuongCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/TinhLuongCongNhan.fxml
@@ -8,126 +8,184 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-    <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.PhanCongCongNhanController">
-        <center>
-            <ScrollPane fitToHeight="true" fitToWidth="true" BorderPane.alignment="CENTER">
-                <content>
-                    <TableView editable="true" tableMenuButtonVisible="true">
-                        <columns>
-                            <TableColumn prefWidth="122.39998775720596" text="Mã công nhân" />
-                            <TableColumn prefWidth="157.60006713867188" text="Họ tên" />
-                            <TableColumn minWidth="8.79998779296875" prefWidth="112.0" text="Tổ sản xuất" />
-                            <TableColumn minWidth="9.60003662109375" prefWidth="120.79998779296875" text="Lương sản phẩm ">
-                     <columns>
-                        <TableColumn prefWidth="75.0" text="Sản phẩm" />
-                        <TableColumn prefWidth="75.0" text="Công đoạn" />
-                        <TableColumn prefWidth="126.4000244140625" text="Số lượng làm được" />
-                        <TableColumn prefWidth="156.79998779296875" text="Thành tiền" />
-                     </columns>
-                  </TableColumn>
-                            <TableColumn prefWidth="194.39996337890625" text="Lương chính" />
-                            <TableColumn prefWidth="296.800048828125" text="Truy lãnh">
-                                <columns>
-                                    <TableColumn prefWidth="128.00001525878906" text="Bảo hiểm y tế" />
-                                    <TableColumn prefWidth="124.0" text="Bảo hiểm xã hội" />
-                                    <TableColumn prefWidth="128.00001525878906" text="Tạm ứng" />
-                                </columns>
-                            </TableColumn>
-                            <TableColumn prefWidth="179.2000732421875" text="Lương sản phẩm ngoài giờ">
-                     <columns>
-                        <TableColumn prefWidth="75.0" text="Sản phẩm" />
-                        <TableColumn prefWidth="75.0" text="Công đoạn" />
-                        <TableColumn prefWidth="124.800048828125" text="Số lượng làm được" />
-                        <TableColumn prefWidth="146.39990234375" text="Thành tiền" />
-                     </columns>
-                  </TableColumn>
-                            <TableColumn prefWidth="460.0" text="Phụ cấp">
-                                <columns>
-                                    <TableColumn prefWidth="128.00001525878906" text="Tiền chuyên cần" />
-                                    <TableColumn prefWidth="124.0" text="Tiền điện thoại" />
-                                    <TableColumn prefWidth="128.00001525878906" text="Tiền nhà trọ" />
-                                    <TableColumn prefWidth="128.00001525878906" text=" Tiền con nhỏ" />
-                                </columns>
-                            </TableColumn>
-                            <TableColumn prefWidth="227.20001220703125" text="Lương thực tế" />
-                        </columns>
-                    </TableView>
-                </content>
-            </ScrollPane>
-        </center>
-        <bottom>
-            <HBox alignment="CENTER" fillHeight="false" BorderPane.alignment="CENTER">
-                <children>
-                    <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Tính lương" />
-                </children>
-                <BorderPane.margin>
-                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                </BorderPane.margin>
-                <padding>
-                    <Insets right="10.0" top="10.0" />
-                </padding>
-            </HBox>
-        </bottom>
-        <top>
-            <VBox BorderPane.alignment="CENTER">
-                <children>
-                    <HBox alignment="CENTER_LEFT" prefWidth="1180.0" spacing="15.0">
-                        <children>
-                            <HBox alignment="CENTER" spacing="10.0">
-                                <children>
-                                    <Label text="Mã công nhân:" />
-                                    <TextField prefHeight="26.0" prefWidth="152.0" />
-                                </children>
-                                <padding>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                </padding>
-                            </HBox>
-                            <HBox alignment="CENTER" spacing="10.0">
-                                <children>
-                                    <Label text="Tên công nhân:" />
-                                    <TextField prefHeight="26.0" prefWidth="152.0" />
-                                </children>
-                                <padding>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                </padding>
-                            </HBox>
-                            <HBox alignment="CENTER" prefHeight="30.0" prefWidth="270.0" spacing="10.0">
-                                <children>
-                                    <Label text="Tổ sản xuất" />
-                                    <ComboBox prefHeight="26.0" prefWidth="154.0" />
-                                </children>
-                                <padding>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                </padding>
-                            </HBox>
-                            <Button mnemonicParsing="false" text="Lấy dữ liệu " />
-                        </children>
-                    </HBox>
-                    <HBox alignment="CENTER">
-                        <children>
-                            <Label text="Lương tháng xx">
-                                <font>
-                                    <Font name="System Bold" size="20.0" />
-                                </font>
-                            </Label>
-                        </children>
-                        <padding>
-                            <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
-                        </padding>
-                    </HBox>
-                </children>
-                <BorderPane.margin>
-                    <Insets />
-                </BorderPane.margin>
-                <padding>
-                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                </padding>
-            </VBox>
-        </top>
-    </BorderPane>
+<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.TinhLuongCongNhanController">
+    <center>
+        <ScrollPane fitToHeight="true" fitToWidth="true" BorderPane.alignment="CENTER">
+            <content>
+                <TableView fx:id="tblLuongCongNhan" editable="true" tableMenuButtonVisible="true">
+                    <columns>
+                        <TableColumn fx:id="collSTTLuongCN" prefWidth="30.0" text="STT" />
+                        <TableColumn fx:id="colMaCN" prefWidth="100.0" text="Mã công nhân" />
+                        <TableColumn fx:id="colHoVaTenCN" prefWidth="264.0" text="Họ và tên">
+                            <columns>
+                                <TableColumn fx:id="colHoCN" prefWidth="183.0" text="Họ" />
+                                <TableColumn fx:id="colTenCN" prefWidth="117.0" text="Tên" />
+                            </columns></TableColumn>
+                        <TableColumn fx:id="colToSanXuatCN" minWidth="8.79998779296875" prefWidth="109.0" text="Tổ sản xuất" />
+                        <TableColumn fx:id="colChuyenCanNangSuatCN" minWidth="8.79998779296875" prefWidth="677.0" text="Chuyên cần - Năng suất">
+                            <columns>
+                                <TableColumn fx:id="colSoNgayDiLamCN" minWidth="9.60003662109375" prefWidth="90.0" text="Số ngày đi làm" />
+                                <TableColumn fx:id="colSoNgayTangCaCN" prefWidth="99.0" text="Số ngày tăng ca" />
+                                <TableColumn fx:id="colSoNgayNghiCN" prefWidth="85.0" text="Số ngày nghỉ" />
+                                <TableColumn fx:id="colSoNgayCoPhepCN" prefWidth="112.0" text="Số ngày nghỉ phép" />
+                        <TableColumn fx:id="colChiTieuPhanCongCN" minWidth="9.60003662109375" prefWidth="115.0" text="Chỉ tiêu phân công" />
+                        <TableColumn fx:id="colSoLuongLamCN" minWidth="9.60003662109375" prefWidth="99.0" text="Số lượng làm" />
+                        <TableColumn fx:id="colSoLuongLamCaBaCN" minWidth="9.60003662109375" prefWidth="99.0" text="Số lượng tăng ca" />
+                            </columns>
+                        </TableColumn>
+                        <TableColumn fx:id="colLuongCN" prefWidth="522.0" text="Lương">
+                            <columns>
+                                <TableColumn fx:id="colLuongNhanDuocCN" prefWidth="180.0" text="Lương nhận được" />
+                                <TableColumn fx:id="colLuongThucTeCN" prefWidth="180.0" text="Lương thực tế" />
+                            </columns>
+                        </TableColumn>
+                        <TableColumn fx:id="colTruyLanhCN" prefWidth="347.0" text="Truy lãnh">
+                            <columns>
+                                <TableColumn fx:id="colBHYTCN" prefWidth="120.0" text="Bảo hiểm y tế" />
+                                <TableColumn fx:id="colBHXHCN" prefWidth="120.0" text="Bảo hiểm xã hội" />
+                                <TableColumn fx:id="colTamUngCN" prefWidth="120.0" text="Tạm ứng" />
+                            </columns>
+                        </TableColumn>
+                        <TableColumn fx:id="colPhuCapCN" prefWidth="333.0" text="Phụ cấp">
+                            <columns>
+                                <TableColumn fx:id="colTienNangSuatCN" prefWidth="120.0" text="Tiền năng suất" />
+                                <TableColumn fx:id="colTienConNhoCN" prefWidth="120.0" text="Tiền con nhỏ" />
+                                <TableColumn fx:id="colTienNhaTroCN" prefWidth="120.0" text="Tiền nhà trọ" />
+                            </columns>
+                        </TableColumn>
+                    </columns>
+                </TableView>
+            </content>
+        </ScrollPane>
+    </center>
+    <bottom>
+        <HBox alignment="CENTER" fillHeight="false" spacing="50.0">
+            <children>
+                <Button maxWidth="200.0" mnemonicParsing="false" onAction="#tinhLuongCongNhan" prefWidth="100.0" text="Tính lương">
+                    <graphic>
+                        <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../images/icons/edit-removebg-preview.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                    <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    </HBox.margin>
+                </Button>
+                <Button maxWidth="200.0" mnemonicParsing="false" onAction="#temp" prefWidth="100.0" text="temp">
+                    <graphic>
+                        <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../images/icons/edit-removebg-preview.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+                <Button maxWidth="200.0" mnemonicParsing="false" onAction="#luuDanhSachLuong" prefWidth="100.0" text="Lưu">
+                    <graphic>
+                        <ImageView fitHeight="23.0" fitWidth="23.0" onDragDetected="#luuBangLuongCongNhan" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../images/icons/edit-removebg-preview.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+                <Button maxWidth="200.0" mnemonicParsing="false" onAction="#xuatBangLuongCongNhan" prefWidth="100.0" text="Xuất">
+                    <graphic>
+                        <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../images/icons/edit-removebg-preview.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+                <Button maxWidth="200.0" mnemonicParsing="false" prefWidth="100.0" text="Tính lương">
+                    <graphic>
+                        <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../images/icons/edit-removebg-preview.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+            </children>
+            <BorderPane.margin>
+                <Insets />
+            </BorderPane.margin>
+        </HBox>
+    </bottom>
+    <top>
+        <VBox BorderPane.alignment="CENTER">
+            <children>
+                <HBox alignment="CENTER_LEFT" prefWidth="1180.0" spacing="15.0">
+                    <children>
+                        <HBox alignment="CENTER" spacing="10.0">
+                            <children>
+                                <Label text="Mã công nhân" />
+                                <TextField fx:id="tfLocMaCN" prefHeight="26.0" prefWidth="152.0" />
+                            </children>
+                            <padding>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </padding>
+                        </HBox>
+                        <HBox alignment="CENTER" spacing="10.0">
+                            <children>
+                                <Label text="Tên công nhân" />
+                                <TextField fx:id="tfLocTenCN" prefHeight="26.0" prefWidth="152.0" />
+                            </children>
+                            <padding>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </padding>
+                        </HBox>
+                        <HBox alignment="CENTER" spacing="10.0">
+                            <children>
+                                <Label text="Tháng - Năm" />
+                                <ComboBox fx:id="cbxLocThangTinhLuongCN" prefHeight="26.0" prefWidth="120.0" />
+                                <ComboBox fx:id="cbxLocNamTinhLuongCN" prefHeight="26.0" prefWidth="120.0" />
+                            </children>
+                            <padding>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </padding>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="30.0" prefWidth="270.0" spacing="10.0">
+                            <children>
+                                <Label text="Tổ sản xuất: " />
+                                <ComboBox fx:id="cbxLocToSanXuatCN" prefHeight="26.0" prefWidth="154.0" />
+                            </children>
+                            <padding>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </padding>
+                        </HBox>
+                        <Button mnemonicParsing="false" onAction="#layDuLieuLocLuongCongNhan" text="Lấy dữ liệu " />
+                    </children>
+                </HBox>
+                <HBox alignment="CENTER">
+                    <children>
+                        <Label fx:id="lblThangNamLuongCN" text="Bảng lương tháng xx-xxxx">
+                            <font>
+                                <Font name="System Bold" size="20.0" />
+                            </font>
+                        </Label>
+                    </children>
+                    <padding>
+                        <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
+                    </padding>
+                </HBox>
+            </children>
+            <BorderPane.margin>
+                <Insets />
+            </BorderPane.margin>
+            <padding>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </padding>
+        </VBox>
+    </top>
+</BorderPane>
