--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/TinhLuongCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/TinhLuongCongNhan.fxml
@@ -19,7 +19,7 @@
     <center>
         <ScrollPane fitToHeight="true" fitToWidth="true" BorderPane.alignment="CENTER">
             <content>
-                <TableView fx:id="tblLuongCongNhan" editable="true" tableMenuButtonVisible="true">
+                <TableView fx:id="tblLuongCongNhan" editable="true" onMouseClicked="#chiTietBangLuongCongNhanDuocChon" tableMenuButtonVisible="true">
                     <columns>
                         <TableColumn fx:id="collSTTLuongCN" prefWidth="30.0" text="STT" />
                         <TableColumn fx:id="colMaCN" prefWidth="100.0" text="Mã công nhân" />
@@ -68,7 +68,7 @@
     <bottom>
         <HBox alignment="CENTER" fillHeight="false" spacing="50.0">
             <children>
-                <Button maxWidth="200.0" mnemonicParsing="false" onAction="#tinhLuongCongNhan" prefWidth="100.0" text="Tính lương">
+                <Button maxWidth="300.0" mnemonicParsing="false" onAction="#lamMoiDanhSach" prefWidth="200.0" text="Làm mới">
                     <graphic>
                         <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -80,7 +80,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </HBox.margin>
                 </Button>
-                <Button maxWidth="200.0" mnemonicParsing="false" onAction="#temp" prefWidth="100.0" text="temp">
+                <Button fx:id="btnLuuDanhSachBangLuongCongNhan" maxWidth="300.0" mnemonicParsing="false" onAction="#luuDanhSachLuong" prefWidth="200.0" text="Lưu danh sách">
                     <graphic>
                         <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -89,25 +89,7 @@
                         </ImageView>
                     </graphic>
                 </Button>
-                <Button maxWidth="200.0" mnemonicParsing="false" onAction="#luuDanhSachLuong" prefWidth="100.0" text="Lưu">
-                    <graphic>
-                        <ImageView fitHeight="23.0" fitWidth="23.0" onDragDetected="#luuBangLuongCongNhan" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../../images/icons/edit-removebg-preview.png" />
-                            </image>
-                        </ImageView>
-                    </graphic>
-                </Button>
-                <Button maxWidth="200.0" mnemonicParsing="false" onAction="#xuatBangLuongCongNhan" prefWidth="100.0" text="Xuất">
-                    <graphic>
-                        <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../../images/icons/edit-removebg-preview.png" />
-                            </image>
-                        </ImageView>
-                    </graphic>
-                </Button>
-                <Button maxWidth="200.0" mnemonicParsing="false" prefWidth="100.0" text="Tính lương">
+                <Button fx:id="btnLuuBangLuongDuocChon" maxWidth="300.0" mnemonicParsing="false" onAction="#luuBangLuongCongNhanDuocChon" prefWidth="200.0" text="Lưu bảng chọn">
                     <graphic>
                         <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -148,7 +130,7 @@
                         <HBox alignment="CENTER" spacing="10.0">
                             <children>
                                 <Label text="Tháng - Năm" />
-                                <ComboBox fx:id="cbxLocThangTinhLuongCN" prefHeight="26.0" prefWidth="120.0" />
+                                <ComboBox fx:id="cbxLocThangTinhLuongCN" onAction="#kiemTraThang" prefHeight="26.0" prefWidth="120.0" />
                                 <ComboBox fx:id="cbxLocNamTinhLuongCN" prefHeight="26.0" prefWidth="120.0" />
                             </children>
                             <padding>
@@ -164,6 +146,15 @@
                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                             </padding>
                         </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="220.0" spacing="10.0">
+                     <children>
+                        <Label text="Bao gồm đã tạo" />
+                        <ComboBox fx:id="cbxTrangThaiTaoBangLuongCN" prefHeight="26.0" prefWidth="100.0" />
+                     </children>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </HBox>
                         <Button mnemonicParsing="false" onAction="#layDuLieuLocLuongCongNhan" text="Lấy dữ liệu " />
                     </children>
                 </HBox>
